Wed Oct 25 18:03:34 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: new option --utf16-decode

Wed Oct 25 17:39:24 CEST 2006 (tk)
----------------------------------
  * libclamav: add support for UTF16 encoded HTML files,
	       requested by Christoph

Wed Oct 25 12:40:10 CEST 2006 (acab)
------------------------------------
  * clamscan/clamscan.c: fix typo breaking -l (closes bug#83)
  			 reported by Yaniv Kaul <ykaul * zone.checkpoint.com>

Wed Oct 25 04:30:36 CEST 2006 (acab)
------------------------------------
  * libclamav: add support for NsPack (--enable-experimental)
  
Mon Oct 23 17:48:39 CEST 2006 (tk)
----------------------------------
  * libclamav: improve support for NodalCore SDK 3.3

Sun Oct 22 11:24:07 BST 2006 (njh)
----------------------------------
  * libclamav/pdf.c:	Handle ASCII85 encoded Flated objectes (bug#43)

Thu Oct 19 20:33:15 CEST 2006 (acab)
------------------------------------
  * libclamav/pe.c: remove unused variable

Thu Oct 19 20:27:06 CEST 2006 (acab)
------------------------------------
  * libclamav: obey limits in unspin - closes bug#81 (thanks Trog)

Thu Oct 19 18:34:43 BST 2006 (njh)
----------------------------------
  * libclamav:	Added JavaScript scanning

Thu Oct 19 14:54:49 CEST 2006 (tk)
----------------------------------
  * libclamav/other.h: increase CLI_MAX_ALLOCATION (bb#54)

Thu Oct 19 14:32:02 CEST 2006 (tk)
----------------------------------
  * docs/signatures.{pdf,tex}: update

Thu Oct 19 13:50:18 CEST 2006 (tk)
----------------------------------
  * clamd/others.c: remove C_WINDOWS specific implementation of readsock (bb#68)
		    Thanks to Mark Pizzolato

Wed Oct 18 14:25:04 BST 2006 (trog)
-----------------------------------
  * libclamav/unrar/unrarcmd.c: Add include and clean up.

Wed Oct 18 11:56:44 BST 2006 (trog)
-----------------------------------
  * libclamav/unrar/unrar.c,unrar.h: Fix decoding of some RAR2 files.

Wed Oct 18 09:48:46 BST 2006 (trog)