@@ -280,6 +280,11 @@ int petite_inflate2x_1to9(char *buf, uint32_t minrva, uint32_t bufsz, struct pe_
       thisrva=cli_readint32(packed+8); /* RVA of the original section */
       packed += 0x10;
 
+      if ( j >= 90 ) {
+	cli_dbgmsg("Petite: maximum number of sections exceeded, giving up.\n");
+	free(usects);
+	return -1;
+      }
       /* Alloc 1 more struct */
       if ( ! (tmpsct = cli_realloc(usects, sizeof(struct SECTION) * (j+1))) ) {
 	if (usects)
